Evas textblock: Fixed format parsing to not be confused by single-quotes.
Before this commit, having a single quote anywhere in the format would mess
up all of the format parsing.

Thanks to MinSu Seo for reporting.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-06-25  Tom Hacohen
+
+	* Evas textblock: Fixed issue when parsing formats with quotes.
+
 2013-06-28  Jiyoun Park
 
     * Evas: Fix jpeg loader cannot deal with exif information correctly
