--- a/NEWS
+++ b/NEWS
@@ -11,7 +11,7 @@ Additions:
      - Add mkdtemp.
      - Add evil_rename() a wrapper for rename().
      - Add strsep().
-    * eina:
+    * Eina:
      - Add DOCTYPE children parsing in eina_simple_xml
      - Add eina_barrier thread API
      - Add eina_tmpstr_add(), eina_tmpstr_del(), eina_tmpstr_add_length() and
@@ -31,14 +31,14 @@ Additions:
      - Add eina_inlist_last
      - Add eina_str_convert_len() to work around broken eina_str_convert()
      - Add eina_file_dup()
-    * eet:
+    * Eet:
      - Add eet_mmap()
      - Add eet_data_descriptor_name_get()
-    * eo:
+    * Eo:
      - Add generic efl object infrastructure
      - Add debugging facility
      - Make eoid use mmaped tables from anonymous memory for safety.
-    * evas:
+    * Evas:
      - Add WebP image loader and saver modules.
      - Add ellipsis support in Evas_Object_Text.
      - Add EVAS_GL_LINE_OFFSET_HACK_DISABLE to turn off line shift correction by evas.
@@ -50,8 +50,7 @@ Additions:
      - Add multiple font draws support to engines
      - Add Cserve2 scalecache support
      - Add evas_object_image_source_clip_set()/get()
-     - Asynchronous preload of GL texture.
-    * ecore_x:
+    * Ecore_X:
      - Add window profile support.
        ECORE_X_ATOM_E_WINDOW_PROFILE_SUPPORTED
        ECORE_X_ATOM_E_WINDOW_PROFILE
@@ -77,7 +76,7 @@ Additions:
        ECORE_X_ATOM_E_ILLUME_ACCESS_ACTION_BACK
        ECORE_X_ATOM_E_ILLUME_ACCESS_ACTION_SCROLL
        ECORE_X_ATOM_E_ILLUME_ACCESS_ACTION_MOUSE
-    * ecore_wayland:
+    * Ecore_Wayland:
      - Store global wayland interfaces in a globals list so wayland programs
        can bind to other non-standard wayland protocol extensions.
      - ecore_wl_globals_get()
@@ -86,7 +85,7 @@ Additions:
        and use the API.
      - Add support for double and triple click.
      - Add ecore_wl_window_alpha_set/get().
-    * ecore_evas:
+    * Ecore_Evas:
      - ecore_evas_window_profile_supported_get()
      - ecore_evas_window_profile_set()
      - ecore_evas_window_profile_get()
@@ -96,12 +95,12 @@ Additions:
      - Add infrastructure to handle message between ecore and parent ecore in Ecore_Evas.
      - Add window profile support to ecore_evas_extn.
      - Add window profile support to ecore_evas_buffer.
-    * ecore_getopt:
+    * Ecore_Getopt:
      - Add ECORE_GETOPT_ACTION_BREAK
-    * ecore_audio:
+    * Ecore_audio:
      - Add PulseAudio backend.
      - Add Alsa backend.
-    * ecore_input_evas:
+    * Ecore_Input_Evas:
      - Add infrastructure to handle buggy touchscreen.
     * Edje:
      - textblock: Added support for size_range.
@@ -119,7 +118,7 @@ Additions:
     * Ecore:
      - notify systemd that we are ready as soon as the main loop is running.
      - automatically support Watchdog.
-    * ecore_imf: 
+    * Ecore_Imf: 
      - Add ecore_imf_context_input_panel_layout_variation_set/get API
      - Add ecore_imf_input_panel_hide API
      - Add ecore_imf_context_input_panel_event_callback_call, clear API
@@ -128,7 +127,7 @@ Additions:
      - Add eio_eet_sync symbols.
         
 Deprecations:
-    * ecore_x:
+    * Ecore_X:
      - Old profile stuffs.
        ECORE_X_ATOM_E_PROFILE
        ECORE_X_ATOM_E_PROFILE_LIST
@@ -137,210 +136,242 @@ Deprecations:
        ecore_x_randr_crtc_gamma_ramp_size_get()
        ecore_x_randr_crtc_gamma_ramps_get()
        ecore_x_randr_crtc_gamma_ramps_set()
-    * ecore_evas: deprecate DirectFB, XRender, WinCE, X11-16 and X11-8.
-    * eeze: deprecate libudev<148 and libmount<2.18
+    * Ecore_Evas: deprecate DirectFB, XRender, WinCE, X11-16 and X11-8.
+    * Eeze: deprecate libudev<148 and libmount<2.18
 
 Removed:
-    * directfb support:
-     - ecore_directfb
-     - evas directfb engine.
-    * Removed XRender, WinCE, Glew, Direct3d, X11-16 and X11-8 ecore_evas support.
-    * Removed svg from inside merged tree.
+    * Evas:
+     - Remove support for DirectFB, XRender, WinCE, Glew, Direct3d, X11-16 and X11-8.
+     - Remove svg loader from inside the tree.
+    * Ecore_Evas:
+     - Remove support for DirectFB, XRender, WinCE, Glew, Direct3d, X11-16 and X11-8.
+    * Ecore_DirectFB:
+     - Removed
 
 Improvements:
-    * Reduced number of enqueued font commands when rendering textgrid objects
-    * Single EFL tree covering all EFL library components.
-    * Speedup Eina Rbtree Iterator by recycling memory instead of
-      repeatedly calling malloc/free.
-    * Display more information with eet -l -v.
-    * eina_magic_fail() now throws error messages on NULL pointers instead of critical
-    * all efl object-freeing functions now take NULL without crashing or erroring
-    * use Eina_File in webp, gif, tiff, png and eet loader
-    * Eina.h includes eina_alloca.h/alloca.h to define alloca()
-    * Improved eina share del speed.
-    * Upgrade liblinebreak to latest version of libunibreak.
-    * edje entry: cursor position and location will be passed when it's really changed in case of mouse down, move, and up event.
-    * edje entry: remove ecore_imf_context_reset in mouse up event because it's useless.
-    * rebase dns.c against upstream
-    * Don't over align data if they are already aligned.
-    * edje entry: remove ecore_imf_context_reset, cursor update in mouse move event because it's useless.
-    * edje entry: move ecore_imf_context_cursor_position_set from mouse down event to mouse up event.
-    * Use ecore_audio in edje-multisense
-    * Ecore_Evas wayland-egl only renders now if last frame has been presented.
-    * edje entry : Remove ecore_imf_context_cursor_position_set in functions related to selection.
+    * EFL:
+     - Single EFL tree covering all EFL library components.
+     - All efl object-freeing functions now take NULL without crashing or erroring
+     - Use the right macro to disable fcntl.
     * Translations updates:
      - french.
-    * edje entry : Support &, < and > in preedit string
-    * eina: Eina_Tiler now take tile size into account.
-    * edje: reduce memory consumption of Edje program handler.
-    * eina, evas: improved support for 64bits system.
-    * Evas GL engine downscale quality in smooth mode much improved with multisampling up to effectively 16x16 via shaders.
-    * eina: eina_strlcat now work with a NULL source.
-    * Evas textblock: Added proper size adjustments for "high" shaped texts.
-    * Use the right macro to disable fcntl.
-    * Edje: use Eina_Cow to reduce memory usage.
-    * Embryo: use eina_file_mkstemp().
-    * Evas textblock : Added split cursor for BiDi text
-    * Evas works around MESA/intel xorg bug where alpha channel of non-argb windows is not filled in with 0xff.
-    * edje entry: remove duplicated ecore_imf_context_reset in adjusting the selection
-    * Evas: update the map smart members really when it needs to render.
-    * Evas: reduce memory footrpint with evasgl to only make context on demand.
-    * Evas: reduce waiting on gl so it cvan fully run async from cpu.
-    * Ecore_Audio: use eo api to batch more
-    * Edje entry emtis signals on keydown/up for theme to use
-    * Turn on scissors always to abe able to to partual render on some GL implementations properly.
-    * Evas gl engine - dont map dri/drm buffer unless we are going to render.
-    * Partial rendering support in evas for several gl drivers.
-    * edje: use eo array of callbacks to reduce callbacks memory footprint.
-    * evas: use eo array of callbacks to reduce callbacks memory footprint of Evas_Object_Box and Evas_Object_Table.
-    * evas: optimized path for when map use the same color for all corner.
-    * Edje entry: Move cursor to correct position when selection handlers are pressed.
-    * eet: force thread to always run during eet_cache_concurrency test.
+    * Eina:
+     - Speedup Eina Rbtree Iterator by recycling memory instead of
+       repeatedly calling malloc/free.
+     - eina_magic_fail() now throws error messages on NULL pointers instead of critical
+     - Eina.h includes eina_alloca.h/alloca.h to define alloca()
+     - Faster eina share del.
+     - Don't over align data if they are already aligned.
+     - Eina_Tiler now take tile size into account.
+     - Improve support for 64bits system.
+     - eina_strlcat now work with a NULL source.
+    * Eet:
+     - Display more information with eet -l -v.
+     - Force thread to always run during eet_cache_concurrency test.
+    * Evas:
+     - Reduced number of enqueued font commands when rendering textgrid objects
+     - Use Eina_File in webp, gif, tiff, png and eet loader
+     - Upgrade liblinebreak to latest version of libunibreak.
+     - Improved support for 64bits system.
+     - GL engine downscale quality in smooth mode much improved with multisampling up to effectively 16x16 via shaders.
+     - Textblock: Added proper size adjustments for "high" shaped texts.
+     - Textblock : Added split cursor for BiDi text
+     - Works around MESA/intel xorg bug where alpha channel of non-argb windows is not filled in with 0xff.
+     - Update the map smart members really when it needs to render.
+     - Reduce memory footrpint with evasgl to only make context on demand.
+     - Reduce waiting on gl so it cvan fully run async from cpu.
+     - GL engine don't map dri/drm buffer unless we are going to render.
+     - GL engine get partial rendering support for several gl drivers.
+     - Turn on scissors always to abe able to to partual render on some GL implementations properly.
+     - Use eo array of callbacks to reduce callbacks memory footprint of Evas_Object_Box and Evas_Object_Table.
+     - Optimized path for when map use the same color for all corner.
+     - Asynchronous preload of GL texture.
+    * Ecore_Con:
+     - Rebase dns.c against upstream
+    * Edje:
+     - Entry: cursor position and location will be passed when it's really changed in case of mouse down, move, and up event.
+     - Entry: remove ecore_imf_context_reset in mouse up event because it's useless.
+     - Entry: remove ecore_imf_context_reset, cursor update in mouse move event because it's useless.
+     - Entry: move ecore_imf_context_cursor_position_set from mouse down event to mouse up event.
+     - Entry: remove ecore_imf_context_cursor_position_set in functions related to selection.
+     - Entry: support &, < and > in preedit string.
+     - Entry: remove duplicated ecore_imf_context_reset in adjusting the selection.
+     - Entry: emits signals on keydown/up for theme to use.
+     - Entry: move cursor to correct position when selection handlers are pressed.
+     - Use ecore_audio in edje-multisense
+     - Reduce memory consumption of Edje program handler.
+     - Use Eina_Cow to reduce memory usage.
+     - Use eo array of callbacks to reduce callbacks memory footprint.
+    * Ecore_Evas:
+     - wayland-egl only renders now if last frame has been presented.
+    * Embryo:
+     - Use eina_file_mkstemp().
+    * Ecore_Audio:
+     - Use eo api to batch more
 
 Fixes:
-    * Fix a memory leak in ecore_con_dns when using ecore_con_server_connect
-    * Fix PPC (big endian) image codec bug.
-    * Fix return value of eina_mmap_safety_enabled_set() and future
-      eina_mmap_safety_enabled_get() returns after success
-    * Fixed GLX native surface handling to use glXChooseFBConfig.
-      This frixes a break in compositing on new intel mesa drivers.
-    * Fixed glGetIntegerv() in Direct Rendering mode for Evas GL
-      to properly handle GL_SCISSOR_BOX and GL_VIEWPORT parameters.
-    * Fixed textblock textprop leak.
-    * Fixed evas_object_box to reset size_hint_min to zero when no child.
-    * Fix build of Ecore_Evas_Extn on Solaris.
-    * Don't leak fd on exec.
-    * Fixed polygon rendering bug in GL backend when there are cutouts.
-    * Fix leak in eet_pbkdf2_sha1 with OpenSSL.
-    * Fix the gl line incorrect position drawing.
-    * Fix possible buffer overflow in functions relying on EET_T_LAST
-    * Fix possible memory corruption in xrandr EDID functions.
-    * Fix potential segv in software engine native_set code.
-    * Fix uninitialized data in Evas OpenGL engine.
-    * Fix the line drawing clipping problem on arm gl driver.
-    * Fix many memory problems with ecore_evas_extn.
-    * Fix Evas RGBA_Image->flags.loaded for copied images.
-    * Fix evas_object_image_is_inside()
-    * eio functions no longer crash when passed NULL and throw errors accordingly
-    * Fix eina_xattr_value_ls() and eina_xattr_value_fd_ls()
-    * Fix mask write lines to not choose too small segments
-    * Fix ecore_con case where freeing server double-frees clients
-    * Fix build of Evas XCB backend
-    * Fix efreet desktop command parsing of https
-    * Fix eina_prefix_new() with debian multilib without magic check file.
-    * Fix evas bmp loader code which deal with image size.
-    * Fix not up to date clip cache for Evas_Object_Text.
-    * Evas texblock: Fixed a bug with breaking after format items.
-    * Fix endianess issue in Eet_Image.
-    * Fix bug in eio_file_map_new container set.
-    * Evas textblock: Fixed issue with line height when breaking on a format.
-    * Fix SIGFPE in evas map update if image is 0.
-    * Evas textblock: Fixed issue and simplified cursor_geometry_get.
-    * Evas text: Fixed issue with horiz advance.
-    * Evas text utils: Fixed issue with no-harfbuzz bidi.
-    * Fixed pixman surface alloc where allocated and image size differ.
-    * Fixed x11 error sync issue with ecore_x_image_get()
-    * Fix evas gif loader to return the correct frame duration
-    * Prevent a crash even if an invalid object is swallowed into an edje object.
-    * Fix cache miss when active edje hash is empty.
-    * Prevent denial of service on eina_hash function.
-    * Fix return type of function ecore_wl_outputs_get().
-    * Fix memleak in Eina_File.
-    * Fix ecore_x_screen_is_composited/set() to work on multihead.
-    * Fix memory usage of Ecore_Con_Server
-    * Fix memory leak in eina_xattr_value_ls.
-    * Fix memory leak in gstreamer_ecore_x_check
-    * Evas textblock: Fixed a selection issue with different scripts and bidi.
-    * Fix memory leak in error case in ethumb.
-    * fix bug not to display preedit string with PREEDIT_TYPE_NONE style
-    * Fix bug candidate word couldn't be selected with up/down key in the preedit status
-    * Edje textblock: Improved textblock fit.
-    * fix anchor clicked mouse signals for selection-enabled entries
-    * Fix edje_color_class_list() and edje_text_class_list() to look at right hashes.
-    * Evas: Fix Evas_Object_Text when LTR and RTL are used in the same paragraph.
-    * Properly report file not found in Edje.
-    * Fix ecore-x edid fetch to ftech 128, not 100 bytes.
-    * Evas text: Fixed bug with the text object direction detection.
-    * Evas font: Fixed font run detection for specific cases with 2 different fonts in the middle of a run.
-    * Evas cache: remove the freed worker from the pthread worker list when it's failed to create a new thread so as not to access it if a thread is working newly.
-    * fix custom states for edje SPACER parts    
-    * fix edje program filters
-    * fix dangling pointer problem related with shmget fail
-    * fix bug scroll works when PgDn, PgUp, Home, End key in entry is pressed in preedit state
-    * clean up gnutls session initialization
-    * fix bug not check data value when get deiconify message
-    * fix use of ecore_con_*_flush functions with unconnected objects
-    * fix setting of write flags on ecore-con servers during connect
-    * fix gles support to only use GL_UNPACK_ROW_LENGTH if extension exists
-    * Fix magic failure in eina_value_array_count when array has not been allocated
-    * Ecore_x: fix alpha set function not clear sync counter
-    * Fix evas word start/end find in textblock to be consistent with other toolkit logic on the matter
-    * Fix edje entry to respect filters and if input filtered out, don't clear selections
-    * Fix evas buffer engine allocation with non alpha output
-    * Evas font: click on left/right half of char does matter now.
-    * Evas font: If OS/2 table is available and the font is demi-bold, don't do runtime emboldment.
-    * Evas font: fix font source have wrong current size.
-    * Evas: Fix over redrawing of Evas_Map when applied on smart object.
-    * Evas font: Fix a bug with cluster size calculation with texts ending
-	with ligatures.
-    * Edje entry: When cursor is located to each edge, entry now doesn't grab events for cursor movement.
-    * Evas map: don't be crashed even if image size is 0.
-    * Evas: Don't update evas update area by the clipper if the image obj visible is changed.
-    * Evas: fix gif decoding bug related with background color.
-    * Evas: fix gif bug related with scale down decode.
-    * Evas textblock: Fixed a bug with deletion of ranges that end just a visual format.
-    * Evas: If an object goes to be hidden without replacing the cur/prev state info, the object context can be corrupted at the next show time. Now it replaces the cur/prev in that rare case.
-    * Evas: Fix evas gl_x11 in 16bpp and lower depths than 24/32 bpp.
-    * Edje: Fix useless ecore_imf_context_reset call in case of pressing ESC and Return key
-    * Edje: When selected word exists, selection is cleared and cursor remains on the current entry by additional key input.
-    * Ecore-X: Fix selection parser to not overrun buffer read by using longs on 64bit.
-    * Evas: Fix recursive proxy image rendering to just render black
-    * Evas textblock: Fixed line size calculation when using multiple fonts.
-    * Evas: Fix gif loader can't load image which has normal frames and error frames
-    * Ecore_Input_Evas: Fix ecore_input_evas didn't check the device id of mouse event
-    * Edje: fix custom states for proxy parts
-    * Evas: Don't try blend on gl backened if the render option is COPY
-    * Evas text: Fixed line size calculation when using multiple fonts.
-    * Evas: Fix crash if app use native surface in wrong engine.
-    * Edje entry: return surrounding string until the start position of selection
-    * Ecore-imf: fix crash when ecore_imf_context_del is called in ecore_imf_context_input_panel_callback_call
-    * Edje textblock: Fixed issue with quoted formats.
-    * Edje textblock: Keep the text styles when new font by the text class is applied.
-    * Fix fd handler increase issue when ecore_pipe_add/del is called repeatedly.
-    * Edje Lua: Stop leaking evas objects in Lua.
-    * Fix use of ecore_con_server_client_limit_set() (counter never decreased).
-    * Fix use of ecore_con_client_timeout_set() and ecore_con_server_timeout_set() that makes timeout on 
-      connections even if you sent data.
-    * Fix cl->start_time (initialization missing). So now
-      ecore_con_client_uptime_get() is working.
-    * Fix srv->start_time (initialization missing). So now
-      ecore_con_server_uptime_get() is working for plain TCP connections.
-    * Fix textblock to render pre again if it needs to relayouting.
-    * Fix edje min size calc to calc sub GROUP parts too.
-    * Fix textblock ascent/descent calc to use superset of fontset data.
-    * Fix evas gl partial swap to keep full renders if auto mode switching.
-    * Fix memory leak in evas dri/drm swapbuf path
-    * Fix string leak in evas dri/drm swapbuf
-    * Fix crash on exit in ecore_audio
-    * Fix eet_mmap to use caches for lookup so it shares with everyone
-    * Fix edje multisense segv (free non-malloced data from eet)
-    * Fix evas proxy_unset of NULL image.
-    * Fix x11 selection trailing nul byte in text
-    * Fix slowness in glmap/unmap buffer by default in evas gl engine
-    * Fix evas segv on image del if loader is NULL
-    * Fix evas swapregion rect to account for rotation
-    * Fix "always scissor" to not break map in evas gl engine
-    * Fix issue when wchar_t is signed and eina_unicode does negative array lookups.
-    * Fix nvidia texture from pixmap config depth match to be looser to avoid non-matches.
-    * Fix evas gl engine to work in 16bpp nicely.
-    * Fix native surface to be more anal about depth matching.
-    * Fix eeze sensors to not segv on shutdown
-    * Evas: correctly detect if a loader support asynchronous preloading.
-    * Evas: improve stability of Evas_Cserve2.
-    * Evas: Fix gif cannot decode alpha value correctly.
-    * Evas: Fix bs if app call image object update add after call api like fileset.
-    * Evas: Fix evas_gl direct rendering to support partial redraw.
-    * Evas textblock: Fixed issue with textblocks without fonts segfaulting.
-    * Evas: Fix evas_common_convert_yuv_42* functions to actually return the converted data.
-    * Evas: Fix jpeg loader cannot deal with exif information correctly
-    * Evas textblock: Fixed issue when parsing formats with quotes.
+    * Eina:
+     - Fix return value of eina_mmap_safety_enabled_set() and future
+       eina_mmap_safety_enabled_get() returns after success.
+     - Don't leak fd on exec.
+     - Fix eina_xattr_value_ls() and eina_xattr_value_fd_ls()
+     - Fix eina_prefix_new() with debian multilib without magic check file.
+     - Prevent potential denial of service on eina_hash function.
+     - Fix memleak in Eina_File.
+     - Fix memory leak in eina_xattr_value_ls.
+     - Fix magic failure in eina_value_array_count when array has not been allocated.
+     - Fix issue when wchar_t is signed and eina_unicode does negative array lookups.
+    * Eet:
+     - Fix PPC (big endian) image codec bug.
+     - Fix leak in eet_pbkdf2_sha1 with OpenSSL.
+     - Fix possible buffer overflow in functions relying on EET_T_LAST
+     - Fix endianess issue in Eet_Image.
+     - Fix eet_mmap to use caches for lookup so it shares with everyone.
+    * Evas:
+     - Fix GLX native surface handling to use glXChooseFBConfig.
+       This frixes a break in compositing on new intel mesa drivers.
+     - Fix glGetIntegerv() in Direct Rendering mode for Evas GL
+       to properly handle GL_SCISSOR_BOX and GL_VIEWPORT parameters.
+     - Fix textblock textprop leak.
+     - Fix evas_object_box to reset size_hint_min to zero when no child.
+     - Don't leak fd on exec.
+     - Fix polygon rendering bug in GL backend when there are cutouts.
+     - Fix the gl line incorrect position drawing.
+     - Fix potential segv in software engine native_set code.
+     - Fix uninitialized data in Evas OpenGL engine.
+     - Fix the line drawing clipping problem on arm gl driver.
+     - Fix Evas RGBA_Image->flags.loaded for copied images.
+     - Fix evas_object_image_is_inside()
+     - Fix mask write lines to not choose too small segments.
+     - Fix build of Evas XCB backend.
+     - Fix evas bmp loader code which deal with image size.
+     - Fix not up to date clip cache for Evas_Object_Text.
+     - Fix a bug with breaking after format items in Evas_Object_Textblock.
+     - Fix issue with line height when breaking on a format in Evas_Object_Textblock.
+     - Fix SIGFPE in evas map update if image is 0.
+     - Fix issue and simplified cursor_geometry_get in Evas_Object_Textblock.
+     - Fix issue with horiz advance in Evas_Object_Text.
+     - Fix issue with no-harfbuzz bidi in evas text utils.
+     - Fix pixman surface alloc where allocated and image size differ.
+     - Fix evas gif loader to return the correct frame duration.
+     - Fix a selection issue with different scripts and bidi in Evas_Object_Textblock.
+     - Fix bug not to display preedit string with PREEDIT_TYPE_NONE style in Evas_Object_Textblock.
+     - Fix bug candidate word couldn't be selected with up/down key in the preedit status in Evas_Object_Textblock.
+     - Fix Evas_Object_Text when LTR and RTL are used in the same paragraph.
+     - Fix bug with the text object direction detection.
+     - Fix font run detection for specific cases with 2 different fonts in the middle of a run.
+     - Remove the freed worker from the pthread worker list when it's failed to create a new thread so as not to access it if a thread is working newly.
+     - Fix gles support to only use GL_UNPACK_ROW_LENGTH if extension exists.
+     - Fix Evas_Map to not crash even if image size is 0.
+     - Fix evas word start/end find in textblock to be consistent with other toolkit logic on the matter.
+     - Fix evas buffer engine allocation with non alpha output.
+     - Click on left/right half of char does matter now.
+     - If OS/2 table is available and the font is demi-bold, don't do runtime emboldment.
+     - Fix font source have wrong current size.
+     - Fix over redrawing of Evas_Map when applied on smart object.
+     - Fix a bug with cluster size calculation with texts ending with ligatures.
+     - Don't update evas update area by the clipper if the image obj visible is changed.
+     - Fix gif decoding bug related with background color.
+     - Fix gif bug related with scale down decode.
+     - Fix a bug with deletion of ranges that end just a visual format in Evas_Object_Textblock.
+     - If an object goes to be hidden without replacing the cur/prev state info, the object context can be corrupted at the next show time. Now it replaces the cur/prev in that rare case.
+     - Fix evas gl_x11 in 16bpp and lower depths than 24/32 bpp.
+     - Fix recursive proxy image rendering to just render black.
+     - Fix line size calculation when using multiple fonts in a Evas_Object_Textblock.
+     - Fix gif loader can't load image which has normal frames and error frames.
+     - Don't try blend on gl backened if the render option is COPY.
+     - Fix Evas_Object_Text line size calculation when using multiple fonts.
+     - Fix crash if app use native surface in wrong engine.
+     - Fix textblock to render pre again if it needs to relayouting.
+     - Fix textblock ascent/descent calc to use superset of fontset data.
+     - Fix evas gl partial swap to keep full renders if auto mode switching.
+     - Fix memory leak in evas dri/drm swapbuf path.
+     - Fix string leak in evas dri/drm swapbuf.
+     - Fix evas proxy_unset of NULL image.
+     - Fix slowness in glmap/unmap buffer by default in evas gl engine.
+     - Fix evas segv on image del if loader is NULL.
+     - Fix evas swapregion rect to account for rotation.
+     - Fix "always scissor" to not break map in evas gl engine.
+     - Fix nvidia texture from pixmap config depth match to be looser to avoid non-matches.
+     - Fix evas gl engine to work in 16bpp nicely.
+     - Fix native surface to be more anal about depth matching.
+     - Correctly detect if a loader support asynchronous preloading.
+     - Improve stability of Evas_Cserve2.
+     - Fix gif cannot decode alpha value correctly.
+     - Fix bs if app call image object update add after call api like fileset.
+     - Fix evas_gl direct rendering to support partial redraw.
+     - Fix issue with textblocks without fonts segfaulting.
+     - Fix evas_common_convert_yuv_42* functions to actually return the converted data.
+     - Fix jpeg loader cannot deal with exif information correctly.
+     - Fix issue when parsing formats with quotes.
+    * Ecore:
+     - Don't leak fd on exec.
+     - Fix fd handler increase issue when ecore_pipe_add/del is called repeatedly.
+    * Ecore_Con:
+     - Fix a memory leak in ecore_con_dns when using ecore_con_server_connect.
+     - Don't leak fd on exec.
+     - Fix ecore_con case where freeing server double-frees clients.
+     - Fix memory usage of Ecore_Con_Server.
+     - Clean up gnutls session initialization.
+     - Fix use of ecore_con_*_flush functions with unconnected objects.
+     - Fix setting of write flags on ecore-con servers during connect.
+     - Fix use of ecore_con_server_client_limit_set() (counter never decreased).
+     - Fix use of ecore_con_client_timeout_set() and ecore_con_server_timeout_set() that makes timeout on 
+       connections even if you sent data.
+     - Fix cl->start_time (initialization missing). So now
+       ecore_con_client_uptime_get() is working.
+     - Fix srv->start_time (initialization missing). So now
+       ecore_con_server_uptime_get() is working for plain TCP connections.
+    * Ecore_Evas:
+     - Fix build of Ecore_Evas_Extn on Solaris.
+     - Fix many memory problems with ecore_evas_extn.
+    * Ecore_X:
+     - Fix possible memory corruption in xrandr EDID functions.
+     - Fix x11 error sync issue with ecore_x_image_get().
+     - Fix ecore_x_screen_is_composited/set() to work on multihead.
+     - Fix ecore-x edid fetch to ftech 128, not 100 bytes.
+     - Fix dangling pointer problem related with shmget fail.
+     - Fix bug not check data value when get deiconify message.
+     - Fix alpha set function not clear sync counter.
+     - Fix selection parser to not overrun buffer read by using longs on 64bit.
+     - Fix x11 selection trailing nul byte in text.
+    * Ecore_Wayland:
+     - Fix return type of function ecore_wl_outputs_get().
+    * Ecore_Input_Evas:
+     - Fix ecore_input_evas didn't check the device id of mouse event.
+    * Ecore-imf:
+     - Fix crash when ecore_imf_context_del is called in ecore_imf_context_input_panel_callback_call.
+    * Eio:
+     - Don't leak fd on exec.
+     - eio functions no longer crash when passed NULL and throw errors accordingly.
+     - Fix bug in eio_file_map_new container set.
+    * Edje:
+     - Prevent a crash even if an invalid object is swallowed into an edje object.
+     - Fix cache miss when active edje hash is empty.
+     - Improved textblock part fit.
+     - Fix anchor clicked mouse signals for selection-enabled entries.
+     - Fix edje_color_class_list() and edje_text_class_list() to look at right hashes.
+     - Properly report file not found in Edje.
+     - Fix custom states for SPACER parts.
+     - Fix edje program filters.
+     - Fix bug scroll works when PgDn, PgUp, Home, End key in entry is pressed in preedit state.
+     - Fix edje entry to respect filters and if input filtered out, don't clear selections.
+     - When cursor is located to each edge, entry now doesn't grab events for cursor movement.
+     - Fix useless ecore_imf_context_reset call in case of pressing ESC and Return key.
+     - When selected word exists, selection is cleared and cursor remains on the current entry by additional key input.
+     - Fix custom states for proxy parts.
+     - Entry: return surrounding string until the start position of selection
+     - Textblock: fixed issue with quoted formats.
+     - Textblock: feep the text styles when new font by the text class is applied.
+     - Lua: Stop leaking evas objects in Lua.
+     - Fix edje min size calc to calc sub GROUP parts too.
+     - Fix edje multisense segv (free non-malloced data from eet).
+    * Efreet:
+     - Fix desktop command parsing of https.
+    * Emotion:
+     - Fix memory leak in gstreamer_ecore_x_check.
+    * Ethumb:
+     - Fix memory leak in error case.
+    * Eeze:
+     - Fix sensors to not segv on shutdown.
+
