--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-07-03  Shinwoo Kim
+
+	* Ecore: add atoms - enable, disable - to support accessibility
+
 2013-07-02  ChunEon Park (Hermet)
 
 	* Evas: optimize proxy rendering. Rendering performance is increased up to 2x in some cases.
