eet: add support for EET_T_VALUE.
Add the moment, it only support simple type. Need iterator for more
complex type. It also expect a pointer to an Eina_Value and not directly
an Eina_Value, let me know if you prefer the opposite and maybe I
should rename it EET_T_PVALUE.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-07-15  Cedric Bail
+
+	* Eet: Add support for EET_T_VALUE to serialize Eina_Value pointer.
+
 2013-07-11  Chris Michael
 
         * Ecore_Evas: Added functions to retieve the pixmap depth, visual, and colormap
