edje: Refactor signal callbacks flags
Share a byte with 2 matchs and use bitwise operations to read/write they states
is not much readable and easily could lead a issues.

Use a struct is much simpler and only will coast a half of byte per match.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-07-22 José Roberto de Souza
+
+    * Edje: Refactor signal callbacks flags
+
 2013-07-19  Cedric Bail
 
 	* Edje: add threshold to draggable part.
